cmake_minimum_required(VERSION 2.6)
PROJECT(exception)

OPTION(USE_QT "Flag que determina se o suporte a Qt deve ser compilado")

MESSAGE(STATUS "definitions : ${exception_HEADERS}")

IF (USE_QT)
    FIND_PACKAGE(Qt4 REQUIRED)
    INCLUDE(${QT_USE_FILE})
    ADD_DEFINITIONS(${QT_DEFINITIONS})
ENDIF(USE_QT)

SET(PLATFORM "autodetect" CACHE STRING "Plataforma, pode ser windows, linux, autodetect ou none")

IF(${PLATFORM} STREQUAL "none")
    SET(BUILD_DEFAULT ON)
ELSEIF(${PLATFORM} STREQUAL "windows")
    SET(BUILD_WINDOWS ON)
ELSEIF(${PLATFORM} STREQUAL "linux")
    SET(BUILD_LINUX ON)
ELSEIF(${PLATFORM} STREQUAL "autodetect")
    IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
	SET(BUILD_WINDOWS ON)
    ELSEIF(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
	SET(BUILD_LINUX ON)
    ELSE(${CMAKE_SYSTEM_NAME} MATCHES "Windows") 
	SET(BUILD_DEFAULT ON)
    ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
ELSE(${PLATFORM} STREQUAL "none")
    MESSAGE(FATAL_ERROR "Opcao invalida para PLATFORM: ${PLATFORM}")
ENDIF(${PLATFORM} STREQUAL "none")



ADD_SUBDIRECTORY(src)

MESSAGE(STATUS "Opcao PLATFORM: ${PLATFORM}")
