cmake_minimum_required(VERSION 2.8)

project(exception)

IF(BUILD_QT)
FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS})
ELSE()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

IF(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
	get_property(LIB64 GLOBAL PROPERTY FIND_LIBRARY_USE_LIB64_PATHS)
	if (${LIB64} STREQUAL "TRUE")
	    set(LIBSUFFIX 64)
	else()
	    set(LIBSUFFIX "")
	endif()
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLINUX")
	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLINUX")
ENDIF()

ENABLE_TESTING()
add_subdirectory(project)
