IF(${CMAKE_COMPILER_IS_GNUCC})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF(${CMAKE_COMPILER_IS_GNUCC})

SET(SOURCES
	Exception.cpp
)

SET(HEADERS
	Exception.h
	platform.h
)

IF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
SET(HEADERS ${HEADERS} windows/StackWalker.h)
SET(SOURCES ${SOURCES} windows/StackWalker.cpp)
ENDIF(${CMAKE_SYSTEM_NAME} MATCHES "Windows")

ADD_LIBRARY(exception STATIC ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(test main.cpp Exception.h)

TARGET_LINK_LIBRARIES(test exception)