IF(${CMAKE_COMPILER_IS_GNUCC})
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
ENDIF(${CMAKE_COMPILER_IS_GNUCC})

SET(SOURCES
	Exception.cpp
)

SET(HEADERS
	Exception.h
	BackTrace.h
)

IF(BUILD_WINDOWS)
SET(SOURCES ${SOURCES} windows/BackTrace.cpp)
ADD_DEFINITIONS(-D__WINDOWS__)
ADD_LIBRARY(stackwalker STATIC windows/StackWalker.cpp windows/StackWalker.h)
ELSEIF(BUILD_LINUX)
SET(SOURCES ${SOURCES} linux/BackTrace.cpp)
ADD_DEFINITIONS(-D__LINUX__)
ELSE(BUILD_WINDOWS)
SET(SOURCES ${SOURCES} default/BackTrace.cpp)
ADD_DEFINITIONS(-D__UNKNOWN_PLATFORM__)
ENDIF(BUILD_WINDOWS)

ADD_LIBRARY(exception STATIC ${SOURCES} ${HEADERS})

IF(USE_QT)
    TARGET_LINK_LIBRARIES(exception ${QT_LIBRARIES})
ENDIF(USE_QT)

IF(BUILD_WINDOWS)
    TARGET_LINK_LIBRARIES(exception stackwalker)
ENDIF(BUILD_WINDOWS)


ADD_EXECUTABLE(test main.cpp Exception.h)

TARGET_LINK_LIBRARIES(test exception)
